* commit to resvole overlay issue on mobile screen

--- a/public/stylesheets/register.css
+++ b/public/stylesheets/register.css
@@ -52,8 +52,3 @@ li:hover{
     text-decoration: underline;
 }
 
-
-footer {
-    flex: 0 0 90px;
-}
-
